--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-hello world
+<html>
+    <head>
+        <title>My Site</title>
+    </head>
+
+    <body style="background-color: black; color: greenyellow; font-family: monospace;">
+
+        <h1 id="welcome" style="transform:rotate3d(0,0,0); text-align: center;">Welcome!</h1>
+
+        <script>
+            var angle = 0;
+            setInterval(function() {
+                angle = angle + 1;
+                document.getElementById("welcome").style.transform = `rotate3d(0,.1,0,${angle}deg)`;
+
+                if(angle === 360){
+                    angle = 0;
+                }
+                }  , 1);
+        </script>
+    </bodY>
+</html>
